NIM-17282 Update release notes for 6.10.6 GA

--- a/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.5.md
+++ b/docs/releases/release_notes_low-level/6.x/6.10.x/6.10.5.md
@@ -6,10 +6,11 @@ search:
 
 # LLRN 6.10.5
 
-These are low-level release notes for IP Fabric release `6.10.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 1 issues.
+These are low-level release notes for IP Fabric release `6.10.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 2 issues.
 
 ## Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
+- `NIM-16738` -- Highest -- IPF Feature Matrix - BGP Neighbors and Advertised routes both shown as "BGP"
 - `NIM-16851` -- Medium -- IPF GUI crashes every 2 seconds if callhome.ipfabric.io is not resolved
