--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -8,6 +8,22 @@ description: In this section, you can find the release notes for v6.10 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v6.10.6 (December 30th, 2024; GA)
+
+```
+SHA256 (ipfabric-update-6-10-6+1.tar.gz.sig) = 44198e6dcd93584adc3f62f4d8df83b2310b6a5fcf5702c25d670511966cc31d
+MD5 (ipfabric-update-6-10-6+1.tar.gz.sig) = 34300d89900e2e21eeba6b72313dce1e
+SHA256 (ipfabric-6-10-6+1.ova) = b3953b97b7ee305a92d57f3a15ed12ce8d388af0fa43d901a078deef7ea9e536
+MD5 (ipfabric-6-10-6+1.ova) = c4f07e13d9c996d67f4edb493936d544
+SHA256 (ipfabric-6-10-6+1.qcow2) = 529a4dbe660752c085e44bce8b61103996bc0fd620d2f7ef2e18b8d7716ed654
+MD5 (ipfabric-6-10-6+1.qcow2) = ab1638e02e23e2cb517d0d02d8fa6608
+SHA256 (ipfabric-6-10-6+1.vmdk) = faeaae7a8865eca862eda5b12f28d7fc3a5302013a5a1484ec40deeac02fce52
+MD5 (ipfabric-6-10-6+1.vmdk) = 5d0b876d77feb7b21aa55392ecdad17b
+```
+
+- The login method for the new upgrade portal to version 7.x has been changed.
+Basic authentication has been replaced with a cookie-based login method.
+
 ## v6.10.5 (November 27th, 2024; GA)
 
 ```
