--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -58,3 +58,5 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 #### Vendor Support and Improvements
 
 - Added Silver Peak API key authentication support.
+- Added IPv6 BGP neighbors support for Arista (EOS), Cisco (IOS, IOS-XE, NX-OS), FS (FSOS), PaloAlto (PAN-OS)
+- Added URL filtering support in firewall rules for Cisco (FTD), Fortinet (FortiGate), PaloAlto (PAN-OS) 
