NIM-6934 Azure NLB to RN & IAM policy update

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -41,6 +41,15 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
   [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso/#automated-sso-enablement-for-the-ipf-applicatio/)
   page.
 
+#### Azure Network Load Balancers (NLB) support
+
+- Data collection and end-to-end path lookup via NLB nodes are supported. However, path lookup via Azure private links is not supported yet.
+  
+  !!! warning "Do not forget to update IAM policy"
+
+      To collect Azure Network Load Balancers, the corresponding IAM policy must be updated.
+      You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_2.json).
+  
 ### Improvements
 
 #### GUI
