NIM-16910 add docs for new interfaces table columns

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -57,6 +57,13 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 - We have updated default tabs settings for consoleServer devices in Device Explorer:
   added Serial Ports, removed QoS, MAC and Port Channel. This resets previous tab settings for this device type.
 - Edges in topology graphs now support multiple labels, which can be displayed either inline or on separate lines. These settings are customizable in the Visualization Setup panel of the Network Viewer, allowing configuration for each protocol or group type individually.
+- Additional columns were added to **Inventory --> Interfaces** table, all hidden by default:
+  - `Clearing Type`
+  - `Clearing Value`
+  - `Last Input Type`
+  - `Last Input Value`
+  - `Last Output Type`
+  - `Last Output Value`
 
 #### Discovery Settings
 
