NIM-16569: add warning message

--- a/docs/releases/release_notes/7.1.md
+++ b/docs/releases/release_notes/7.1.md
@@ -22,3 +22,12 @@ tags: ["draft"]
 #### Vendor Support and Improvements
 
 - A large number of various parsing and mapping fixes have been made. For details about these fixes, please check the Low-Level Release Notes.
+
+### Known Issues
+
+#### Inconsistent Color-Coding
+- The **Inventory --> OS Versions** view (`/inventory/os-versions/platforms` and `/inventory/os-versions/models`)
+may display inconsistent color-coding in tables where empty rows appear for the default intent-checks.
+This visual inconsistency does not impact functionality, but it may affect readability.
+- Issue will be resolved in version `7.2`.
+
