--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -78,3 +78,4 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 - Added URL filtering support in firewall rules for Cisco (FTD), Fortinet (FortiGate), PaloAlto (PAN-OS).
 - Added support for SR-MPLS TE with BGP On-Demand Next Hop (ODN) functionality for Cisco (IOS-XR).
 - Added threat feeds support for FortiGate firewalls (IP lists only).
+- The HP vendor has been renamed to HPE.
