NIM-11592 Table ID change for connectivity-matrix/unmanaged-neighbors/detail

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -79,3 +79,17 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 - Added support for SR-MPLS TE with BGP On-Demand Next Hop (ODN) functionality for Cisco (IOS-XR).
 - Added threat feeds support for FortiGate firewalls (IP lists only).
 - The HP vendor has been renamed to HPE.
+
+#### Technology Tables
+
+- **Unmanaged Neighbors Detail** -- Fixed an issue in the **Technology --> Interfaces --> Connectivity matrix --> Unmanaged Neighbors Detail** table where Intent Verification rules could incorrectly highlight rows for specific datasets. Unique row IDs have been enforced to resolve the inconsistency.
+
+  !!! important
+
+      If Intent Verification rules were configured for this table, you may need to trigger their recalculation. To do this, you can either:
+
+      - In **local settings** of the relevant snapshot(s), toggle **"Compute Intent Verification"** off, save settings, then toggle the rule back on; or
+
+       ![Toggle "Compute Intent Verification"](7.2_toggle_intent_verification.png){ width="600" .center}
+
+      - Manually unload and reload the relevant snapshot(s)
