NIM-17380 release note

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -32,6 +32,18 @@ The System Administration UI on port `8443` has been deprecated in version `7.0`
 * [System Update](../../System_Administration/system_update.md)
 * [Restore Admin Access](../../System_Administration/IPF_CLI_Config/set_gui_admin_pass.md)
 
+### Layout Optimization for Large Circular Graphs
+
+Circular graphs with over 100 nodes experienced slow rendering and oversized layouts due to complex line-crossing minimization calculations. This also impacted snapshot discovery/loading performance due to prolonged node position caching.
+
+For graphs exceeding 100 nodes, we now automatically apply the **universal layout** instead of the circular layout. This ensures:
+
+- Faster rendering (reduced layout computation time)
+- Improved readability of large graphs
+- Optimized snapshot performance (quicker node position caching)
+
+The layout type change (circular --> universal) is not yet reflected in API responses or the UI. This visibility will be added in an upcoming release.
+
 ### New Features
 
 #### Automated SSO
