NIM-17061 Introduce device attributes filters docs

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -1,6 +1,6 @@
 ---
 description: In this section, you can find the release notes for v7.2 releases.
-tags: ["draft"]
+#tags: ["draft"]
 ---
 
 # IP Fabric v7.2
@@ -76,6 +76,18 @@ The layout type change (circular --> universal) is not yet reflected in API resp
   - `Last Input Value`
   - `Last Output Type`
   - `Last Output Value`
+
+#### Advanced Filters
+
+- **Device Attribute-Based Advanced Filters**
+  now supports Attributes as a device property.
+
+  This allows you to:
+
+  - Filter data using predefined Attributes, such as `siteName`.
+  - Use custom Attributes for more specific filtering.
+
+- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 
 #### Discovery Settings
 
