NIM-17483 Add release note site separation change

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -117,3 +117,7 @@ The layout type change (circular --> universal) is not yet reflected in API resp
        ![Toggle "Compute Intent Verification"](7.2_toggle_intent_verification.png){ width="600" .center}
 
       - Manually unload and reload the relevant snapshot(s)
+
+#### Site separation
+
+- Devices now automatically inherit their site name from connected peers via **CDP/LLDP**, **STP topology neighbors**, or devices in the same **L3 network**, in order of priority, when rule **Try to assign devices without sites based on device neighborship** is enabled.
