fixing NAE/NIM-17627-aws-version-docs/MR1209

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -1,6 +1,6 @@
 ---
 description: In this section, you can find the release notes for v7.2 releases.
-#tags: ["draft"]
+tags: ["draft"]
 ---
 
 # IP Fabric v7.2
@@ -103,6 +103,9 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 - Added support for SR-MPLS TE with BGP On-Demand Next Hop (ODN) functionality for Cisco (IOS-XR).
 - Added threat feeds support for FortiGate firewalls (IP lists only).
 - The HP vendor has been renamed to HPE.
+- The bookmark `Detail` for all AWS devices has changed. The differences are:
+  - The `Family` column value is now empty (previously was set to `ec2`)
+  - The `Version` column value is now empty (previously was set to `2016-11-15`)
 
 #### Technology Tables
 
