NIM-17632 Update the doc and release notes

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -61,6 +61,11 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 
       To collect Azure Network Load Balancers, the corresponding IAM policy must be updated.
       You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_2.json).
+
+#### Enhanced BGP Community Controls for Optimized Discovery
+
+- Introduced per-device, per-protocol (IPv4/IPv6), and per-VRF BGP community configurations to limit downloaded routes during discovery.
+- This feature prioritizes community-based filtering over global thresholds, ensuring precise data collection while reducing processing time. Ideal for large-scale networks with extensive BGP tables. For more information see [Routing](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/routing.md)
   
 ### Improvements
 
