--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -46,6 +46,11 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 
 ### New Features
 
+#### Configuration Import/Export
+
+- We have developed a new feature that allows you to import and export configurations of the IP Fabric application across multiple IP Fabric instances.
+  More details can be found on the [Configuration Import/Export](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) page.
+
 #### Automated SSO
 
 - We have developed a new script to simplify the SSO setup process for the IP
