Update Low Level Release Notes for 7.0.11

--- a/docs/releases/release_notes_low-level/7.x/7.0.x/7.0.0.md
+++ b/docs/releases/release_notes_low-level/7.x/7.0.x/7.0.0.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.0.0
 
-These are low-level release notes for IP Fabric release `7.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 492 issues.
+These are low-level release notes for IP Fabric release `7.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 495 issues.
 
 ## Epics
 
@@ -18,6 +18,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-13445` -- Medium -- Prepare separate package for frontend components
 - `NIM-13921` -- Medium -- BGP Advertised Routes
 - `NIM-14009` -- Medium -- Implement atoms from design system
+- `NIM-14123` -- Medium -- Cloud Site Separation - Resource ID & Slug modes
 - `NIM-14139` -- Medium -- Vendor API refactoring
 - `NIM-14269` -- Medium -- Create API test framework
 - `NIM-14308` -- Medium -- Enhance OAS setup
@@ -30,7 +31,8 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-15343` -- Medium -- Add device data to table / intent check filters
 - `NIM-15685` -- Medium -- Support custom Apps within IPF platform (extensions)
 - `NIM-15796` -- High -- Adding support for Opengear OM family.
-- `NIM-16126` -- High -- BGP Table - Use BGP Communities as a discovery filter [Phase 1]
+- `NIM-16062` -- Medium -- LS (Large Scale VPN) Tunnels on Palo Alto
+- `NIM-16126` -- High -- BGP Table - Use BGP Communities as a discovery filter [7.0]
 - `DOS-1173` -- Highest -- Add container runtime to IPF Platform
 
 ## Stories
@@ -275,6 +277,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-16393` -- Highest -- Remove glitchy arrows from Visio export
 - `NIM-16402` -- High -- Bug with RBAC Policies
 - `NIM-16456` -- Medium -- Trying to save a view results in "The view can't be save, try it again" error
+- `NIM-17218` -- Highest -- Using a Discovery Force Stop breaks snapshot-related operations, incl. Discovery itself
 - `DOS-1053` -- Medium -- nimpee-net-config - Remove `proxy.cred` when setting-up `anonymous proxy`
 
 ## Tasks
