--- a/docs/releases/release_notes_low-level/7.x/7.0.x/7.0.8.md
+++ b/docs/releases/release_notes_low-level/7.x/7.0.x/7.0.8.md
@@ -6,13 +6,14 @@ search:
 
 # LLRN 7.0.8
 
-These are low-level release notes for IP Fabric release `7.0.8`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 4 issues.
+These are low-level release notes for IP Fabric release `7.0.8`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 5 issues.
 
 ## Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-16605` -- High -- path lookup between cloud native gateways via IP does not work
+- `NIM-16738` -- Highest -- IPF Feature Matrix - BGP Neighbors and Advertised routes both shown as "BGP"
 - `NIM-17164` -- High -- Routing within azure VNET - vrfLeak to default VRF
 
 ## Tasks
