NIM-16992 added new column in Inventory / Devices table

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -1,6 +1,6 @@
 ---
 description: In this section, you can find the release notes for v7.2 releases.
-tags: ["draft"]
+#tags: ["draft"]
 ---
 
 # IP Fabric v7.2
@@ -86,6 +86,8 @@ The layout type change (circular --> universal) is not yet reflected in API resp
   - `Last Input Value`
   - `Last Output Type`
   - `Last Output Value`
+- An additional column  was added to **the Inventory --> Devices** table and is hidden by default:
+  - `Credentials Notes`
 
 #### Advanced Filters
 
