MR!1222 _ fix removed hash tag from release notes

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -1,6 +1,6 @@
 ---
 description: In this section, you can find the release notes for v7.2 releases.
-#tags: ["draft"]
+tags: ["draft"]
 ---
 
 # IP Fabric v7.2
