Fix for MR!1219

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -71,6 +71,11 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 
 - Introduced per-device, per-protocol (IPv4/IPv6), and per-VRF BGP community configurations to limit downloaded routes during discovery.
 - This feature prioritizes community-based filtering over global thresholds, ensuring precise data collection while reducing processing time. Ideal for large-scale networks with extensive BGP tables. For more information see [Routing](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/routing.md)
+
+#### Connections between IPsec & VXLAN tunnel endpoints now visible in path-lookup
+
+- For easier identification of where IPsec and VXLAN tunnels start and end, especially when traversing multiple devices, direct links between tunnel endpoints
+are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup/#ipsec-vxlan-tunnel-endpoints).
   
 ### Improvements
 
