corrected ../ and .md

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -55,7 +55,7 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 
 - We have developed a new script to simplify the SSO setup process for the IP
   Fabric application. More details can be found on the
-  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso/#automated-sso-enablement-for-the-ipf-applicatio/)
+  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso.md/#automated-sso-enablement-for-the-ipf-application)
   page.
 
 #### Azure Network Load Balancers (NLB) support
@@ -75,7 +75,7 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 #### Connections between IPsec & VXLAN tunnel endpoints now visible in path-lookup
 
 - For easier identification of where IPsec and VXLAN tunnels start and end, especially when traversing multiple devices, direct links between tunnel endpoints
-are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup/#ipsec-vxlan-tunnel-endpoints).
+are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup.md/#ipsec-vxlan-tunnel-endpoints).
   
 ### Improvements
 
