ST-414 ST-420 RN bgp threshold known issues 7.0

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -8,6 +8,25 @@ description: In this section, you can find the release notes for v7.0 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v7.0.12 (February 10th, 2025; GA)
+
+```
+SHA256 (ipfabric-update-7-0-12+0.tar.zst.sig) = 4f7f08399d6219b749d332b670215c96373f01a39f28076db6ab5cbfee9eee20
+MD5 (ipfabric-update-7-0-12+0.tar.zst.sig) = 590bde6b216a54ac2e36569ec1b93499
+SHA256 (ipfabric-7-0-12+0.ova) = 240bc26beab29b35f0950b30bfd45bf537e141da69fa32310e4b16e9ffb34918
+MD5 (ipfabric-7-0-12+0.ova) = dd26f2ab91863c944555aa8ae5e53698
+SHA256 (ipfabric-7-0-12+0.qcow2) = 26c4945bb8a70cfe0da5969fa4eea39a67af032cbd1b8148b6ab48853e7c289a
+MD5 (ipfabric-7-0-12+0.qcow2) = b7722e8dbe77d99f8a9c4950f14ca5cd
+SHA256 (ipfabric-7-0-12+0.vmdk) = fa1cbd5c6ed9536d5a5ebe214c5b4732bd8036ae0c70a74f2553c0a956474c17
+MD5 (ipfabric-7-0-12+0.vmdk) = f0eec01e5151ab56e1cfdc03ebaaeff6
+```
+
+### Fixes
+
+- The [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work as expected. When the function was disabled, routes were not being downloaded, even though no limit should have been applied.
+
+## v7.0.11 (January 21st, 2025; EA)
+
 ## v7.0.8 (December 13th, 2024; EA)
 
 ### New Features
@@ -428,6 +447,10 @@ For more details, see the [System Administration UI](../../System_Administration
 
 - **NSX-T Rate Limiter** -- Fixed a bug where, in rare cases, NSX-T discovery issues occurred due to the NSX-T server becoming overloaded.
 - **Juniper Mist API limitations** -- The Juniper Mist API client now uses a specific wait time from the controller's overloaded response, preventing session termination when the default 5000 calls per hour limit is reached.
+
+### Known Issues
+
+- When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
 
 ### Beta Features
 
