Update the release notes and LLRN for 7.0.13

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -8,21 +8,26 @@ description: In this section, you can find the release notes for v7.0 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.0.12 (February 10th, 2025; GA)
+## v7.0.13 (February 11th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-0-12+0.tar.zst.sig) = 4f7f08399d6219b749d332b670215c96373f01a39f28076db6ab5cbfee9eee20
-MD5 (ipfabric-update-7-0-12+0.tar.zst.sig) = 590bde6b216a54ac2e36569ec1b93499
-SHA256 (ipfabric-7-0-12+0.ova) = 240bc26beab29b35f0950b30bfd45bf537e141da69fa32310e4b16e9ffb34918
-MD5 (ipfabric-7-0-12+0.ova) = dd26f2ab91863c944555aa8ae5e53698
-SHA256 (ipfabric-7-0-12+0.qcow2) = 26c4945bb8a70cfe0da5969fa4eea39a67af032cbd1b8148b6ab48853e7c289a
-MD5 (ipfabric-7-0-12+0.qcow2) = b7722e8dbe77d99f8a9c4950f14ca5cd
-SHA256 (ipfabric-7-0-12+0.vmdk) = fa1cbd5c6ed9536d5a5ebe214c5b4732bd8036ae0c70a74f2553c0a956474c17
-MD5 (ipfabric-7-0-12+0.vmdk) = f0eec01e5151ab56e1cfdc03ebaaeff6
+SHA256 (ipfabric-update-7-0-13+0.tar.zst.sig) = 2833c6f36d3653767b20babc8373d5010a931d3a70e315af3bc98924aec19a7f
+MD5 (ipfabric-update-7-0-13+0.tar.zst.sig) = 3d20459604352f024caf434dd4dcd27d
+SHA256 (ipfabric-7-0-13+0.ova) = f016bc77e6a450604c30da6470d231ea17ce75a1c4761816776085aeb024bb3b
+MD5 (ipfabric-7-0-13+0.ova) = afed43cdc4e6145ddcf617e77f1526de
+SHA256 (unsupported-sha1-ipfabric-7-0-13+0.ova) = 0d5da3a0d58df5b1c5110c26ccb47c99f2faccc3474ca94ac88db2d47ea20a2a
+MD5 (unsupported-sha1-ipfabric-7-0-13+0.ova) = a782d545da4acd6590b9d95d53360c90
+SHA256 (ipfabric-7-0-13+0.qcow2) = 1a8b40ff1ba897b4d43e3099005b71123118a3907e869608bfd06ca8f6b5bfda
+MD5 (ipfabric-7-0-13+0.qcow2) = 58ff497db74e53a37da14c74e4c8b687
+SHA256 (ipfabric-7-0-13+0.vmdk) = 451cdd25ff0370912c9a74216a6819b83330908ea320d2cc03b71092c4756e43
+MD5 (ipfabric-7-0-13+0.vmdk) = c1e5fb8fe2997ebffc11846222ec32a4
+SHA256 (ipfabric-7-0-13+0.vhdx.zst) = 3dc670ecc2434d3ee463016f5a830cef23c11089a59f7a3d4ef130d5a312b7cf
+MD5 (ipfabric-7-0-13+0.vhdx.zst) = bfbba509863f5e612ddbeb2363e97ba4
 ```
 
 ### Fixes
 
+- After system reboots, the bandwidth limit sporadically reset to 1 Mb/s and could not be reconfigured.
 - The [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work as expected. When the function was disabled, routes were not being downloaded, even though no limit should have been applied.
 
 ## v7.0.11 (January 21st, 2025; EA)
