add information about show route capabilities

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -76,7 +76,13 @@ The layout type change (circular --> universal) is not yet reflected in API resp
 
 - For easier identification of where IPsec and VXLAN tunnels start and end, especially when traversing multiple devices, direct links between tunnel endpoints
 are now visible in path lookups. More details can be found in [IPsec & VXLAN tunnel endpoints](../../IP_Fabric_GUI/diagrams/how_to_use_path-lookup.md/#ipsec-vxlan-tunnel-endpoints).
-  
+
+#### BGP Route Collection Enhancement
+
+We have introduced filtered BGP route collection support that allows network administrators to explicitly define which networks to collect. This enables focused BGP route analysis while optimizing system resources across Cisco IOS/IOS-XE, IOS-XR, NX-OS, Juniper JunOS, and Arista EOS platforms.
+
+For detailed information about the new API endpoints and configuration options, see [BGP Route Collection API](../../IP_Fabric_API/settings/bgp_route_collection.md).
+
 ### Improvements
 
 #### GUI
