test_richard_account

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -147,3 +147,5 @@ For detailed information about the new API endpoints and configuration options, 
 #### Site separation
 
 - Devices now automatically inherit their site name from connected peers via **CDP/LLDP**, **STP topology neighbors**, or devices in the same **L3 network**, in order of priority, when rule **Try to assign devices without sites based on device neighborship** is enabled.
+
+#### Just for testing - will be removed/revoked
