Show route specs

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -79,9 +79,9 @@ are now visible in path lookups. More details can be found in [IPsec & VXLAN tun
 
 #### BGP Route Collection Enhancement
 
-We have introduced filtered BGP route collection support that allows network administrators to explicitly define which networks to collect. This enables focused BGP route analysis while optimizing system resources across Cisco IOS/IOS-XE, IOS-XR, NX-OS, Juniper JunOS, and Arista EOS platforms.
+We have introduced filtered BGP route collection support, allowing network administrators to explicitly define which networks to collect. This enables focused BGP route analysis while optimizing system resources across **Cisco IOS/IOS-XE**, **IOS-XR**, **NX-OS**, **Juniper JunOS** and **Arista EOS** platforms.
 
-For detailed information about the new API endpoints and configuration options, see [BGP Route Collection API](../../IP_Fabric_API/settings/bgp_route_collection.md).
+For detailed information about the new API endpoints and configuration options, see [BGP Route Collection API](../../IP_Fabric_API/Settings/bgp_route_collection.md).
 
 ### Improvements
 
