improve-upgrade-process-relative-links-7.0

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -91,8 +91,11 @@ already logged in the System Administration interface.
 After successful authentication, the new upgrade interface appears, providing
 two options:
 
-1. Manually upload the upgrade file.
-2. Upgrade over the internet, if the appliance is connected.
+- Option 1: [Offline Update](../../System_Administration/system_update.md#offline-update) is used for environments with restricted internet access.
+It allows for the manual downloading of update files and performing the upgrade without an active internet connection.
+
+- Option 2: [Online Update](../../System_Administration/system_update.md#online-update) requires internet connectivity or a connection to IP Fabric
+servers. It automates the process of checking for and applying updates directly from the IP Fabric interface.
 
 ![Steps to upgrade system to 7.x](6.10_upgrades_to_7x_steps.png)
 
