NAE/NIM-18080 - release note update for url filtering and iplist

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -118,6 +118,21 @@ For detailed information about the new API endpoints and configuration options, 
   missing data is important for running the discovery or can add the data later. Clear messages and dialogs
   will inform users of any potential issues.
 
+#### Network Discovery
+
+- **New Capabilities -- Cisco (FTD), Fortinet (FortiGate), PaloAlto (PAN-OS)**
+
+  - Support for URL filtering has been added.
+  - In Path Lookup under `Advanced Packet Options`, new search fields are now available:
+    - `Site category`: Matches the name of a URL filter category. Works for both built-in and custom categories. The field accepts regex if multiple categories are needed in the result.
+    - `URL / DOMAIN`: Matches a specific URL against applicable security rules.
+
+- **New Capabilities -- PaloAlto (PAN-OS)**
+  - Support for URL-type objects of `External Dynamic List` has been added.
+
+- **New Capabilities -- Fortinet (FortiGate)**
+  - Support for URL-type objects of `External Resource` has been added.
+
 #### Vendor Support and Improvements
 
 - Added Silver Peak API key authentication support.
