--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -25,7 +25,24 @@ tags: ["draft"]
 - An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
 
+#### Network Discovery
+
+- **New Capabilities -- CheckPoint, Juniper**
+  - Support for URL filtering has been added.
+
+- **New Capabilities -- PaloAlto (PAN-OS)**
+  - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
+
+#### Path Lookup
+
+- Using Palo Alto's `External Dynamic List` in combination with end to end path lookup:
+  - To investigate a Path Lookup scenario for a specific IP expected to be in the dynamic list, use the `Source / Destination IP fields` and enter the IP address.
+  - If the content of the dynamic list is not available, or if you need to find where a specific list is being used, use the `Source / Destination Region fields`
+and enter the name of the list as it appears in the configuration.
+
 #### Vendor Support and Improvements
 
 - Interface uptime/downtime is now available for **Arista**.
 - Switch priority is now available for **Cisco** **StackWise**.
+- Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
+[enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
