Fix for MR-1241

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -27,6 +27,9 @@ tags: ["draft"]
 
 #### Network Discovery
 
+- **New Device** –- **AWS Application Load Balancer (ALB)**
+  - Initial support for data collection & inventory. The path lookup via ALB is not supported yet.
+
 - **New Capabilities -- CheckPoint, Juniper**
   - Support for URL filtering has been added.
 
