--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -131,6 +131,12 @@ Extensions supports two streamlined deployment methods:
 - **Source Code Deployment**: Submit your source code and `Dockerfile` in a ZIP archive for automated building and deployment
 - **Pre-built Container Deployment**: Upload your pre-built Docker image (container image created with `docker save` command, has to have `.tar` extension) for immediate execution
 
+!!! warning "Docker default subnet"
+    Docker networking is configured with a virtual interface on the appliance and the default subnet is `172.17.0.0/16`.
+    Devices in this subnet are not reachable from the appliance, because the routing is pointing towards the `docker` 
+    bridge interface. If you must reach devices in this subnet, you need to change the default `docker` bridge
+    subnet. See [how to change the default `docker` bridge subnet](../../support/known_issues/IP_Fabric/unable_to_discover_devices_in_172_17_0_0_16_subnet.md).
+
 ##### Technical Specifications
 
 - Extensions run as containers alongside your main application
