--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -462,6 +462,8 @@ For more details, see the [System Administration UI](../../System_Administration
 ### Known Issues
 
 - When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
+- Juniper devices with large IPv6 routing tables may cause issues during network discovery.
+To mitigate the impact, lower the `Limit download BGP routes` setting in `/settings/discovery-snapshots/global-discovery-settings`.
 
 ### Beta Features
 
