NIM-18206 RN 7.3 - Fortigate IPv6 support

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -36,6 +36,11 @@ tags: ["draft"]
 - **New Capabilities -- PaloAlto (PAN-OS)**
   - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
 
+#### Vendor Support and Improvements
+
+- Added IPv6 support for FortiGate zone firewall tasks.
+- Added IPv6 support for FortiGate GRE tunnels.
+
 #### Path Lookup
 
 - Using Palo Alto's `External Dynamic List` in combination with end to end path lookup:
