Nae/nim 18203 i pv6 bgp threshold

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -137,6 +137,11 @@ For detailed information about the new API endpoints and configuration options, 
 
 - Added Silver Peak API key authentication support.
 - Added IPv6 BGP neighbors support for Arista (EOS), Cisco (IOS, IOS-XE, NX-OS), FS (FSOS), PaloAlto (PAN-OS).
+- Added support for IPv6 BGP Route limit - [see documentation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md)
+  - Arista: EOS
+  - Cisco: NX-OS, IOS, IOS-XE, IOS-XR, Viptela
+  - Juniper: JunOS
+  - Nokia: TiMOS
 - Added URL filtering support in firewall rules for Cisco (FTD), Fortinet (FortiGate), PaloAlto (PAN-OS).
 - Added support for SR-MPLS TE with BGP On-Demand Next Hop (ODN) functionality for Cisco (IOS-XR).
 - Added threat feeds support for FortiGate firewalls (IP lists only).
