--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -8,22 +8,31 @@ description: In this section, you can find the release notes for v7.0 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.0.13 (February 11th, 2025; GA)
+## v7.0.14 (February 26th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-0-13+0.tar.zst.sig) = 2833c6f36d3653767b20babc8373d5010a931d3a70e315af3bc98924aec19a7f
-MD5 (ipfabric-update-7-0-13+0.tar.zst.sig) = 3d20459604352f024caf434dd4dcd27d
-SHA256 (ipfabric-7-0-13+0.ova) = f016bc77e6a450604c30da6470d231ea17ce75a1c4761816776085aeb024bb3b
-MD5 (ipfabric-7-0-13+0.ova) = afed43cdc4e6145ddcf617e77f1526de
-SHA256 (unsupported-sha1-ipfabric-7-0-13+0.ova) = 0d5da3a0d58df5b1c5110c26ccb47c99f2faccc3474ca94ac88db2d47ea20a2a
-MD5 (unsupported-sha1-ipfabric-7-0-13+0.ova) = a782d545da4acd6590b9d95d53360c90
-SHA256 (ipfabric-7-0-13+0.qcow2) = 1a8b40ff1ba897b4d43e3099005b71123118a3907e869608bfd06ca8f6b5bfda
-MD5 (ipfabric-7-0-13+0.qcow2) = 58ff497db74e53a37da14c74e4c8b687
-SHA256 (ipfabric-7-0-13+0.vmdk) = 451cdd25ff0370912c9a74216a6819b83330908ea320d2cc03b71092c4756e43
-MD5 (ipfabric-7-0-13+0.vmdk) = c1e5fb8fe2997ebffc11846222ec32a4
-SHA256 (ipfabric-7-0-13+0.vhdx.zst) = 3dc670ecc2434d3ee463016f5a830cef23c11089a59f7a3d4ef130d5a312b7cf
-MD5 (ipfabric-7-0-13+0.vhdx.zst) = bfbba509863f5e612ddbeb2363e97ba4
+SHA256 (ipfabric-update-7-0-14+0.tar.zst.sig) = cbedaf4b0d8d2d31b7e67bdfb5867dbb64a9d98a13fea86a87621619692e7b5d
+MD5 (ipfabric-update-7-0-14+0.tar.zst.sig) = 652f6f136741df104eb4498acc0cac41
+SHA256 (ipfabric-7-0-14+0.ova) = 18c32a6bf8002b40a32e3ff0da123524424800abd19da7719b05a8feb1d257d4
+MD5 (ipfabric-7-0-14+0.ova) = 30d3869dace98ab28359fd9650f3bf5d
+SHA256 (unsupported-sha1-ipfabric-7-0-14+0.ova) = a028c4ec5e9416832ab01b994b744e260cc8629cac6610b0865605d83269a47b
+MD5 (unsupported-sha1-ipfabric-7-0-14+0.ova) = d3e56fbfed3fce4c9b5db10210582648
+SHA256 (ipfabric-7-0-14+0.qcow2) = 0f5117f67888d75614118d32a095dbadb162e95f92725fe2c1dabfa0583fec70
+MD5 (ipfabric-7-0-14+0.qcow2) = af93269a2cf113d48ec216be6ecb84c4
+SHA256 (ipfabric-7-0-14+0.vmdk) = 7d0ba208b972d11b83664580f3e802af2dcecab48ba975c8332a1893f91cd4c9
+MD5 (ipfabric-7-0-14+0.vmdk) = 83fa8402654786e9c97fc73198c70e1f
+SHA256 (ipfabric-7-0-14+0.vhdx.zst) = ced2e831456d7adab5960878c19106d10c54a306780636fef9f3fae967378c9c
+MD5 (ipfabric-7-0-14+0.vhdx.zst) = 93fb5d279fa88d3b0ee516438db7c4be
 ```
+
+### Fixes
+
+- The Docker service, which is used for extensions, was **disabled and stopped** due to conflicts between its default subnet (`172.17.0.0/16`) and **networks used for discovery**. For more details, refer to the [Extensions section](#extensions-engineering-preview).
+- Resolved various proxy-related issues.
+- Addressed multiple issues affecting the upgrade process.
+- Fixed problems causing failures in techsupport generation.
+
+## v7.0.13 (February 11th, 2025; GA)
 
 ### Fixes
 
@@ -134,11 +143,20 @@ Extensions supports two streamlined deployment methods:
 - **Source Code Deployment**: Submit your source code and `Dockerfile` in a ZIP archive for automated building and deployment
 - **Pre-built Container Deployment**: Upload your pre-built Docker image (container image created with `docker save` command, has to have `.tar` extension) for immediate execution
 
-!!! warning "Docker default subnet"
-    Docker networking is configured with a virtual interface on the appliance and the default subnet is `172.17.0.0/16`.
-    Devices in this subnet are not reachable from the appliance, because the routing is pointing towards the `docker` 
-    bridge interface. If you must reach devices in this subnet, you need to change the default `docker` bridge
-    subnet. See [how to change the default `docker` bridge subnet](../../support/known_issues/IP_Fabric/unable_to_discover_devices_in_172_17_0_0_16_subnet.md).
+!!! warning "Docker Default Subnet"
+
+    As of version `7.0.14`, the Docker service, which is used for extensions, is **disabled and stopped by default** to prevent potential subnet conflicts in its default configuration (`172.17.0.0/16`). This subnet may collide with existing network infrastructure.
+
+    **To customize the Docker subnet:**
+
+    1. Edit the configuration in `/etc/docker/daemon.json`, [see](../../support/known_issues/IP_Fabric/unable_to_discover_devices_in_172_17_0_0_16_subnet.md) OR 
+    2. Contact our customer support team via the [support portal](https://support.ipfabric.io)
+
+    **To use Docker with the default subnet** (only if `172.17.0.0/16` is unused in your environment) run: 
+
+    ```bash
+    sudo systemctl enable docker && sudo systemctl start docker
+    ```
 
 ##### Technical Specifications
 
