improvement of MQ-5907

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -27,17 +27,19 @@ MD5 (ipfabric-7-0-14+0.vhdx.zst) = 93fb5d279fa88d3b0ee516438db7c4be
 
 ### Fixes
 
-- The Docker service, which is used for extensions, was **disabled and stopped** due to conflicts between its default subnet (`172.17.0.0/16`) and **networks used for discovery**. For more details, refer to the [Extensions section](#extensions-engineering-preview).
+- The Docker service, which is used for extensions, was **disabled and stopped** due to conflicts between its default subnet (`172.17.0.0/16`) and
+**networks used for discovery**. For more details, refer to the [Extensions section](#extensions-engineering-preview).
 - Resolved various proxy-related issues.
 - Addressed multiple issues affecting the upgrade process.
 - Fixed problems causing failures in techsupport generation.
+- The [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work
+as expected on `JunOS` for `IPv6` addresses. When the function was disabled, routes were not downloaded, even though no limit should have been applied.
 
 ## v7.0.13 (February 11th, 2025; GA)
 
 ### Fixes
 
 - After system reboots, the bandwidth limit sporadically reset to 1 Mb/s and could not be reconfigured.
-- The [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md) did not work as expected. When the function was disabled, routes were not being downloaded, even though no limit should have been applied.
 
 ## v7.0.11 (January 21st, 2025; EA)
 
@@ -486,8 +488,6 @@ System administration UI on port `8443` will be removed in the near future. In v
 ### Known Issues
 
 - When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
-- Juniper devices with large IPv6 routing tables may cause issues during network discovery.
-To mitigate the impact, lower the `Limit download BGP routes` setting in `/settings/discovery-snapshots/global-discovery-settings`.
 
 ### Beta Features
 
