MQ-5907 Add juniper fixes to RN

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -31,6 +31,7 @@ MD5 (ipfabric-7-0-14+0.vhdx.zst) = 93fb5d279fa88d3b0ee516438db7c4be
 - Resolved various proxy-related issues.
 - Addressed multiple issues affecting the upgrade process.
 - Fixed problems causing failures in techsupport generation.
+- Juniper devices with large IPv6 routing tables were not following the [BGP Threshold function](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/limit_download_of_bgp_routes.md), resulting in the unnecessary downloading of BGP routes. This issue led to an increased snapshot size and caused discovery-related problems.
 
 ## v7.0.13 (February 11th, 2025; GA)
 
@@ -483,7 +484,6 @@ For more details, see the [System Administration UI](../../System_Administration
 ### Known Issues
 
 - When a Palo Alto firewall is connected to the infrastructure using a port-channel, but the port-channel configuration is missing on the device, the Layer 2 (L2) connection is not established in the network graphs. As a result, end-to-end traffic fails to traverse at the L2 level.
-- Juniper devices with large IPv6 routing tables may cause issues during network discovery.
 To mitigate the impact, lower the `Limit download BGP routes` setting in `/settings/discovery-snapshots/global-discovery-settings`.
 
 ### Beta Features
